@@ -1,3 +1,6 @@
 RUNNING = "running"
 STOPPED = "stopped"
 PAUSED = "paused"
+
+MANUAL = "manual"
+AUTOMATIC = "automatic"
