@@ -1,0 +1,9 @@
+import tkinter as tk
+from tkinter import ttk
+from stopwatch import Stopwatch
+
+
+class Pomodoro(Stopwatch):
+	def __init__(self):
+		super().__init__(self)
+
