@@ -7,3 +7,6 @@ STOPWATCH_BG = 'black'
 TIMER_FONT = ('Consolas', 24, 'bold')
 
 STOPWATCH_FONT = ('Consolas', 24, 'bold')
+
+POMO_WORK_TIME = 25
+POMO_REST_TIME = 5
